Done! We solved the alignWith issue.

--- a/commons.wicket/src/main/java/com/pmease/commons/wicket/behavior/inputassist/input-assist.css
+++ b/commons.wicket/src/main/java/com/pmease/commons/wicket/behavior/inputassist/input-assist.css
@@ -16,10 +16,6 @@
 	background-color: #CBE8FB;
 	border-color: #8BC8F9;
 }
-.input-assist .suggestions {
-	max-height: 300px; 
-	overflow: auto;
-}
 .input-assist .description {
 	color: #999;
 	text-align: right;
